php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #39039 SSL: fatal protocol error when fetching HTTPS
Submitted: 2006-10-04 19:08 UTC Modified: 2006-10-05 00:38 UTC
From: david at acz dot org Assigned:
Status: Closed Package: Filesystem function related
PHP Version: 5.1.6 OS: SuSE Linux
Private report: No CVE-ID: None
 [2006-10-04 19:08 UTC] david at acz dot org
Description:
------------
PHP issues the warning "SSL: fatal protocol error" when fetching certain HTTPS URLs, including Google AdSense.

The file_get_contents() function works correctly if errors are suppressed, but I am aware of no way to fix SoapClient.

Since PHP seems capable of working around the error (and other HTTPS libraries work fine), it would be useful to have a global option (perhaps enabled by default) to disable the warning.


Reproduce code:
---------------
file_get_contents("https://adsense.google.com/api/adwords/v6/InfoService?wsdl");

new SoapClient("https://adsense.google.com/api/adwords/v6/InfoService?wsdl");


Expected result:
----------------
The functions should work correctly with no warnings.

Actual result:
--------------
PHP Warning:  file_get_contents(): SSL: fatal protocol error

PHP Warning:  SoapClient::__construct(): SSL: fatal protocol error

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-10-04 21:48 UTC] tony2001@php.net
Open this URL in any browser, it'll show you something like this: "SSL certificate @ adsense.google.com belongs to www.google.com. It is possible that someone is trying to itercept your communication with this web site".
Apparently wrong SSL certificate is not PHP problem.
 [2006-10-04 23:10 UTC] david at acz dot org
Sorry, I copied the wrong URL.  Correct certificate, same warning:

file_get_contents("https://adwords.google.com/api/adwords/v6/InfoService?wsdl");

new SoapClient("https://adwords.google.com/api/adwords/v6/InfoService?wsdl");
 [2006-10-05 00:38 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 27 07:00:02 2026 UTC