MFB: Fixed bug #39039 (SSL: fatal protocol error when fetching HTTPS from servers running Google web server).